# hummingBird

src/hb/hb_common/: CMakeLists.txt  package.xml  setup.py
src/hb/hb_common/launch/: dynamics.launch  hw.launch  sim.launch  test_student_dynamics_file.launch
src/hb/hb_common/src/hb_common/: __init__.py  controller.py  datatypes.py  dynamics.py  helpers.py
src/hb/hb_msgs/: CMakeLists.txt  README.md  package.xml
src/hb/hb_msgs/msg/: Command.msg  ReferenceState.msg  State.msg
src/hb/hb_pkgs/: CMakeLists.txt  package.xml
src/hb/hb_ros_driver/: CMakeLists.txt  package.xml
src/hb/hb_ros_driver/include/hb_ros_driver/: hb_ros_driver.h
src/hb/hb_ros_driver/include/hb_serial_protocol/test/: CMakeLists.txt  test.cpp
src/hb/hb_ros_driver/src/: hb_ros_driver_node.cpp
src/hb/hb_ros_driver/src/hb_ros_driver/: hb_ros_driver.cpp
src/hb/hb_viz/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/hb/hb_viz/launch/: visualize.launch
src/hb/hb_viz/meshes/: head.stl  stand.stl  turnblock.stl
src/hb/hb_viz/rviz/: hummingbird.rviz
src/hb/hb_viz/scripts/: joint_state_publisher.py
src/hb/hb_viz/src/: hummingbird_panel.cpp  hummingbird_panel.h
src/hb/hb_viz/urdf/: hummingbird.urdf.xacro
src/hb_student/: CMakeLists.txt  package.xml
src/hb_student/param/: hb.yml  hb_sim.yml
src/hb_student/scripts/: controller_4.py  controller_full_state.py  controller_full_state_noInt.py  dynamics.py  test_dynamics.py
